--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-iframe": "^1.1.0",
+    "react-modal": "^3.1.12",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
